<!--This file contains string values used throughout the UI and functionality of the pizza party app.. -->
<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>
    <string name="ravenous">Ravenous</string>
    <string name="medium">Medium</string>
    <string name="light">Light</string>
    <string name="_10">10</string>
</resources>